# sha256rpm

./: CMakeLists.txt  main.cpp
